feat: P2端到端集成+goal progress+partial状态+dialogue UI增强+文档同步